--- a/assets/scss/ct.scss
+++ b/assets/scss/ct.scss
@@ -7,7 +7,7 @@ Author URI:
 */
 
 // Anmerkung: Diese Datei muss kompiliert werden
-// (Ziel: ../style.css)
+// (Ziel: ../../style.css)
 
 @import 'variables';
 @import 'reset';
