--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, #blog-title {
 	font-family: $headings-font;
 	font-weight: 300;
 
