--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -1,5 +1,6 @@
-body, div, p,
-h1, h2, h3, h4, h5, h6 {
+body, div, section, p,
+h1, h2, h3, h4, h5, h6,
+input, button {
   margin: 0;
   padding: 0;
 }
@@ -14,6 +15,10 @@ h1, h2, h3, h4, h5, h6, #blog-title {
     text-decoration: none;
     color: $base-font-color;
   }
+}
+
+div, section, form, input {
+   box-sizing: border-box;
 }
 
 body {
