--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -18,7 +18,7 @@ nav#main_nav {
  ******************/
 header {
   position: relative;
-	height: 200px;
+  height: 200px;
 
   #blog-title {
      position: absolute;
@@ -46,15 +46,15 @@ header {
 
 div.top-banner {
 	//position: fixed;
-  background-color: $ct-primary;
+   background-color: $ct-primary;
 	width: 100%;
 	height: 60px;
 	padding: 10px;
 	color: #FFF;
-	box-sizing: border-box;
 
 	#blog-logo {
 		@extend %top-banner-shared;
+      float: left;
 	}
 
 	#menu-btn {
@@ -62,6 +62,44 @@ div.top-banner {
 		float: right;
 		cursor: pointer;
 	}
+
+   div.ct-search-container {
+      float: right;
+      height: 100%;
+      margin-left: 10px;
+
+      form {
+         border: 1px solid $gray-2;
+         border-radius: 3px;
+         background-color: $gray-1;
+         float: left;
+         position: relative;
+         top: 50%;
+         transform: translateY(-50%);
+         padding: 4px 8px;
+
+         %ct-search-shared {
+            float: left;
+            border: none;
+            background-color: $gray-1;
+            height: 28px;
+         }
+
+         input {
+            @extend %ct-search-shared;
+            margin-right: 8px;
+         }
+
+         button {
+            @extend %ct-search-shared;
+            cursor: pointer;
+
+            img {
+               margin-bottom: -2px;
+            }
+         }
+      }
+   }
 }
 
 /******************
@@ -80,7 +118,6 @@ section.blogpost-list {
 	min-height: 800px;
 	margin: 0 auto 40px auto;
 	padding: 40px 90px;
-	box-sizing: border-box;
 
 	article.blogpost {
 		padding: 30px 0;
@@ -96,7 +133,6 @@ section.blogpost-list {
 			border: 1px solid $gray-2;
 			border-radius: 2px;
 			margin-bottom: 10px;
-			//box-sizing: border-box;
 
 			height: auto;
 			width: 100%;
@@ -107,7 +143,7 @@ section.blogpost-list {
 		}
 
 		a.more-link {
-      display: inline-block;
+         display: inline-block;
 			margin-top: 8px;
 			color: $gray-3;
 			text-decoration: none;
@@ -167,7 +203,6 @@ footer {
 	section.main-footer {
 		display: flex;
 		padding: 0 30px;
-		box-sizing: border-box;
 		color: $gray-3;
 
 		.left-footer, .right-footer {
