Rename partial and add to main scss file
Das Breakpoint-Partial wurde umbenannt und in der ct.scss eingetragen

--- a/assets/scss/ct.scss
+++ b/assets/scss/ct.scss
@@ -10,6 +10,7 @@ Author URI:
 // (Ziel: ../../style.css)
 
 @import 'variables';
+@import 'mixins/breakpoints';
 @import 'reset';
 @import 'styles';
 
