--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -19,6 +19,7 @@ nav#main_nav {
       padding: 0 10px;
       display: flex;
       overflow-x: scroll;
+      overflow-y: hidden;
 
       // Es soll zwar gescrollt werden in x-Richtung, aber die
       // browser-eigenen Scrollbars sollen nicht angezeigt werden.
@@ -56,7 +57,8 @@ nav#main_nav {
 
             &:hover {
                border-radius: 2px;
-               background-color: $gray-2;
+               //background-color: $gray-2;
+               background-color: rgba(128, 153, 81, 0.2);
             }
          }
 
@@ -185,11 +187,16 @@ section.blogpost-list {
 	border: 1px solid $gray-2;
 	border-radius: 4px;
 	background-color: white;
-	max-width: 800px;
+	max-width: $base-layout-width;
 	width: 80%;
-	min-height: 800px;
 	margin: 0 auto 40px auto;
 	padding: 40px 90px;
+
+   @include screensize-down(s) {
+      width: 100%;
+      padding: 10px 15px;
+      border-radius: 0;
+   }
 
 	article.blogpost {
 		padding: 30px 0;
@@ -224,6 +231,10 @@ section.blogpost-list {
 		div.blogpost-meta {
 			float: right;
 			color: $gray-2;
+
+         @include screensize-down(s) {
+            font-size: 14px;
+         }
 
          a {
            color: $gray-2;
@@ -269,17 +280,21 @@ nav.pagination {
  *     Footer     *
  ******************/
 footer {
-	width: 800px;
+	max-width: $base-layout-width;
+   width: 80%; // -> wrapper?
 	margin: 0 auto;
 
 	section.main-footer {
 		display: flex;
+      flex-wrap: wrap;
 		padding: 0 30px;
 		color: $gray-3;
 
 		.left-footer, .right-footer {
-			min-height: 100px;
-			width: 50%;
+         flex-shrink: 0;
+         flex-grow: 1;
+         width: 50%;
+         min-width: 200px;
 		}
 
 		.left-footer {
