--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -15,10 +15,13 @@ $text-font:         'Lato', sans-serif;
 $base-font-size:    16px;
 $base-font-color:   $gray-4;
 
+// PIXELANGABEN
+$base-layout-width: 800px;
+
 // BREAKPOINTS
 $breakpoints: (
    xs: 320px,
-   s:  375px,
+   s:  425px,
    m:  768px,
    l:  1024px,
    xl: 1440px
