--- a/assets/scss/ct.scss
+++ b/assets/scss/ct.scss
@@ -12,6 +12,7 @@ Author URI:
 @import 'variables';
 @import 'mixins/breakpoints';
 @import 'reset';
+@import 'animations';
 @import 'styles';
 
 // 1101011001010011001101100
