--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6, #blog-title {
   }
 }
 
-div, main, section, form, input {
+div, main, section, form, input, textarea {
    box-sizing: border-box;
 }
 
