--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -8,6 +8,9 @@
 // TODO:
 // - Layoutbreite auslagern (var o.a.)
 
+/******************
+ *    Main Nav    *
+ ******************/
 
 nav#main_nav {
    display: none;
