--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,6 +8,10 @@ $gray-2: #ddd;
 $gray-3: #919191;
 $gray-4: #333;
 
+// Alerts
+$default-alert: #ADD8E6; // Hellblau
+$error:         #FFB6C1; // Sehr helles Rot
+
 // SCHRIFT
 $headings-font:     'Open Sans', sans-serif;
 $text-font:         'Lato', sans-serif;
