--- a/assets/scss/ct.scss
+++ b/assets/scss/ct.scss
@@ -13,6 +13,7 @@ Author URI:
 @import 'mixins/breakpoints';
 @import 'reset';
 @import 'animations';
+@import 'alerts';
 @import 'styles';
 
 // 1101011001010011001101100
