--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 
 // FARBEN
 $ct-primary: #262F3B;
+$ct-secondary: #809951;
 
 // Grautöne
 $gray-1: #f7f7f7;
@@ -10,7 +11,7 @@ $gray-4: #333;
 
 // Alerts
 $default-alert: #ADD8E6; // Hellblau
-$error:         #FFB6C1; // Sehr helles Rot
+$error-color:   #FFB6C1; // Sehr helles Rot
 
 // SCHRIFT
 $headings-font:     'Open Sans', sans-serif;
