--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -373,6 +373,19 @@ div.comment-respond {
 }
 
 /******************
+ *      Page      *
+ ******************/
+
+article.page {
+   padding: 30px 0;
+
+   h1.page-title {
+      margin-bottom: 10px;
+      font-size: 30px;
+   }
+}
+
+/******************
  *      404       *
  ******************/
 div.page-not-found {
