--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -30,6 +30,12 @@ body {
 		line-height: 1.75;
 		font-size: $base-font-size;
 	}
+
+   main {
+      h1, h2, h3, h4, h5, h6, p {
+         margin-bottom: 10px;
+      }
+   }
 }
 
 ul {
