--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -396,6 +396,12 @@ div.page-not-found {
       font-size: 100px;
       text-align: center;
    }
+
+   p.big-brother {
+      margin-top: 20px;
+      text-align: center;
+      color: $gray-3;
+   }
 }
 
 /******************
