--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,6 +19,7 @@ $text-font:         'Lato', sans-serif;
 
 $base-font-size:    16px;
 $base-font-color:   $gray-4;
+$light-font-color:  $gray-3;
 
 // PIXELANGABEN
 $base-layout-width: 800px;
