Adjust font color of .post-date

--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -337,7 +337,7 @@ article.blogpost {
       position: absolute;
       top: -5px;
       font-size: 18px;
-      color: $gray-2;
+      color: $light-font-color;
       opacity: 0.5;
       transition: 0.4s;
 
