--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -281,7 +281,7 @@ section.blogpost-list {
          border: 1px solid $gray-3;
          border-radius: 3px;
          width: fit-content;
-			margin-top: 8px;
+			margin-top: 12px;
          margin-bottom: 12px;
          padding: 9px 10px 7px 10px;
 			color: $gray-3;
@@ -536,6 +536,19 @@ footer {
 		margin-top: 20px;
       padding-top: 20px;
 		text-align: center;
+
+      .widget-area ul {
+         padding: 0;
+
+         li {
+            display: inline-block;
+            list-style-type: none;
+
+            div {
+               display: inline-block;
+            }
+         }
+      }
 
 		p, span, li {
 			font-size: 12px;
