--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -16,6 +16,7 @@ $error-color:   #FFB6C1; // Sehr helles Rot
 // SCHRIFT
 $headings-font:     'Open Sans', sans-serif;
 $text-font:         'Lato', sans-serif;
+$handwriting-font:  'Courgette', cursive;
 
 $base-font-size:    16px;
 $base-font-color:   $gray-4;
